# ViennaFit

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  pages.yml
docs/: index.md
docs/getting-started/: concepts.md  installation.md  quick-start.md
docs/tutorials/: tutorial-1-basic-optimization.md  tutorial-2-custom-evaluation.md  tutorial-3-sensitivity-analysis.md  tutorial-4-multi-domain.md
examples/: README.md
examples/1-initializeProject/: initializeProject.py
examples/1-setup/: README.md  assignDomains.py  initializeProject.py
examples/2-createInitialDomain/: createInitialDoman.py
examples/2-optimization/: README.md  basicOptimization.py  customEvaluatorExample.py  optional-finalizeOptimization.py
examples/3-custom-evaluations/: grid-customEvaluator.py  repeated-customEvaluator.py
examples/globalSensitivityStudy/: globSensStudy.py
examples/localSensitivityStudy/: locSensStudy.py
examples/optimization/: README.md  basicOptimization.py  customEvaluatorExample.py  exampleOptimization.py
examples/sensitivityAnalysis/: README.md  globalSensitivityStudy.py  localSensitivityStudy.py  parameterStudies.py
examples/setup/: README.md  assignDomains.py  createInitialDomain.py
notebooks/: README.md  tutorial-1-basic-optimization.ipynb
src/fit/: __init__.py  fitDistanceMetrics.py  fitGlobalSensitivityStudy.py  fitLocalSensitivityStudy.py  fitObjectiveWrapper.py  fitOptimization.py  fitProcessSequence.py  fitProject.py  fitStudy.py
src/viennafit/: __init__.py  fitCustomEvaluator.py  fitDistanceMetrics.py  fitExceptions.py  fitGlobalSensitivityStudy.py  fitLocalSensitivityStudy.py  fitObjectiveWrapper.py  fitOptimization.py  fitOptimizerWrapper.py  fitParaviewViewer.py  fitProject.py  fitRunsSummary.py  fitStudy.py  fitUtilities.py
tests/: conftest.py  testFitProject.py  testGlobalSensitivityStudy.py  testLocalSensitivityStudy.py  testOptimization.py  testStudy.py
(+16 files in other folders)
