[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "ViennaFit"
readme = "README.md"
description = "A Python package for fitting ViennaPS simulation models to experimental data."
dependencies = [
    "numpy>=1.24.0",
    "ViennaLS>=4.3.1",
    "viennaps @ git+https://github.com/ViennaTools/ViennaPS.git@master",
    "dlib>=19.24.0",
    "SALib >= 1.5.1",
    ]

[project.urls]
Repository = "https://github.com/kenyastyle/Fit"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
