[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "1.0.0"
name = "ViennaFit"
readme = "README.md"
description = "A Python package for fitting ViennaPS simulation models to experimental data."
dependencies = [
    "numpy>=1.24.0",
    "viennals @ git+https://github.com/ViennaTools/ViennaLS.git@master",
    "viennaps @ git+https://github.com/ViennaTools/ViennaPS.git@master",
    "dlib>=19.24.0",
    "SALib >= 1.5.1",
    "pytest>=6.0.0",
    ]

[project.urls]
Repository = "https://github.com/ViennaTools/ViennaFit.git"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
