[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "2.0.0"
name = "ViennaFit"
readme = "README.md"
description = "A Python package for fitting ViennaPS simulation models to experimental data."
dependencies = [
    "viennaps>=4.0.0",
    "dlib==19.24.0",
    "cma==3.2.2",
    "numpy==1.26.4",
    "nevergrad>=1.0.12",
    "SALib >= 1.5.1",
    ]

[project.urls]
Repository = "https://github.com/ViennaTools/ViennaFit.git"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
